# neural-admixture

./: .gitignore  MANIFEST.in  README.md  enqueue.sh  inference.py  pyproject.toml  replicate.md  requirements.txt  setup.cfg  setup.py  tox.ini  train.py  weighted_mean.py
.github/workflows/: release.yml  test_release.yml
demo/: README.md  run_demo.sh  run_diagnostics.py
demo/data/: demo_data.bed  demo_data.bim  demo_data.fam
demo/outputs/: demo_run.7.P.expected  demo_run.7.Q.expected
model/: initializations.py  neural_admixture.py
neural-admixture/: inference.py  neural-admixture  train.py
neural-admixture/model/: initializations.py  modules.py  neural_admixture.py
neural-admixture/src/: launch_trainings.py  switchers.py  utils.py  vcf_to_hdf5.py
neural_admixture/: __init__.py  _version.py  entry.py
neural_admixture/model/: IPCA_GPU.py  em_adam.py  em_quasi.py  initializations.py  models.py  modules.py  neural_admixture.py  refinement.py  switchers.py  train.py
neural_admixture/model/__test__/: test_initializations.py  test_switchers.py
neural_admixture/src/: inference.py  ipca_gpu.py  loaders.py  main.py  snp_reader.py  svd.py  train.py  utils.py
neural_admixture/src/utils_c/: em.pyx  pack2bit.cu  rsvd.pyx  utils.pyx
notebooks/: admixture_autoencoder.ipynb  evaluation.ipynb  multihead_barplots.ipynb  pca_results.ipynb  results.ipynb
processing/: create_dataset.py  founders_split.py  ld_prune.py  npy_to_vcf.py  vcf_to_hdf5.py
scripts/: admixture_ae.py  custom_losses.py  enqueue.sh  launch_fit.py  weighted_BCE.py
scripts/processing/: create_dataset.py  npy_to_vcf.py
scripts/src/: admixture_ae.py  custom_losses.py  initializations.py  launch_fit.py  multihead_admixture.py  parallel.py  plots.py  switchers.py  utils.py
src/: evaluate.py  launch_fit.py  plots.py  replicate_experiments.py  switchers.py  train.py  utils.py  vcf_to_hdf5.py
