[metadata]
name = neural-admixture
author = Albert Dominguez Mantes
author_email = albert.dominguezmantes@epfl.ch
license = CC BY-NC 4.0
description = Rapid population clustering with autoencoders
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AI-sandbox/neural-admixture
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
[options]
packages = find:
install_requires =
    configargparse>=1.5.3
    Cython>=0.29.30
    codetiming>=1.3.0
    dask>=2022.5.0
    dask-ml>=2022.5.27
    h5py>=3.1.0
    matplotlib>=3.3.4
    numpy>=1.21.0
    pandas>=1.2.4
    pandas_plink>=2.2.9
    py_pcha>=0.1.3
    scikit-allel>=1.3.5
    scikit-learn>=0.24.1
    setuptools>=50.3.1
    torch>=1.7.1
    wandb>=0.12.17

python_requires = >=3.8

[options.entry_points]
console_scripts =
    neural-admixture = neural_admixture.entry:main

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-mock

[flake8]
ignore = E116, E501, E203
