[metadata]
name = neural-admixture
author = Joan Saurina Ricós, Albert Dominguez Mantes
author_email = joansaurina03@gmail.com, adomi@stanford.edu
license = CC BY-NC 4.0
description = Rapid population clustering with autoencoders
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AI-sandbox/neural-admixture
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
[options]
packages = find:
install_requires =
    configargparse>=1.5.3
    Cython>=0.29.30
    dask>=2025.4.1
    dask-ml>=2025.1.0
    numpy>=2.2.5
    setuptools>=50.3.1
    torch<=2.6.0,>2.0.0

python_requires = >=3.8

[options.entry_points]
console_scripts =
    neural-admixture = neural_admixture.entry:main

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-mock

[flake8]
ignore = E116, E501, E203
